v2.2 1、完成菜单、按钮的按照权限进行生成